# spring-boot-kubernetes-bazel

./: README.md  WORKSPACE  maven_install.json
src/main/: BUILD.bazel
src/main/java/com/example/hello/: BUILD.bazel  HelloController.java
src/main/manifests/: BUILD.bazel  deployment.yaml  service.yaml
src/main/resources/: application.yaml
src/test/java/com/example/hello/: BUILD.bazel  HelloControllerIT.java  HelloControllerTest.java
