load("@rules_jvm_external//:defs.bzl", "artifact")
load("@io_bazel_rules_docker//java:image.bzl", "java_image")

java_library(
    name = "com.example.hello_lib",
    srcs = glob(["java/com/example/hello/*.java"]),
    resources = glob(["resources/*"]),
    visibility = ["//src/test:__subpackages__"],
    deps = [
        artifact("org.springframework.boot:spring-boot"),
        artifact("org.springframework.boot:spring-boot-autoconfigure"),
        artifact("org.springframework.boot:spring-boot-starter-web"),
        artifact("org.springframework:spring-web"),
    ],
)

java_image(
    name = "com.example.hello",
    main_class = "com.example.hello.Application",
    runtime_deps = [
        ":com.example.hello_lib",
    ],
)
