load("@rules_jvm_external//:defs.bzl", "artifact")
load("@io_bazel_rules_docker//java:image.bzl", "java_image")

java_library(
    name = "lib",
    srcs = glob(["*.java"]),
    visibility = ["//src/test:__subpackages__"],
    deps = [
        artifact("org.springframework.boot:spring-boot"),
        artifact("org.springframework.boot:spring-boot-autoconfigure"),
        artifact("org.springframework.boot:spring-boot-starter-web"),
        artifact("org.springframework:spring-web"),
    ],
)

java_image(
    name = "hello",
    main_class = "com.example.hello.Application",
    runtime_deps = [
        ":lib",
    ],
)
